# AI-Guard

./: .gitignore  README.md
PII_agent/: README.md
PII_agent/backend/: Dockerfile  detection_filters.py  main.py  requirements.txt
PII_agent/backend/tests/: test_detection_filters.py  test_main_api.py
PII_agent/frontend/: pii-detection.ts
ai-guard/: .gitignore  README.md
ai-guard/branding/: generate-brand-assets.ps1
ai-guard/config/: ai-guard.example.json
ai-guard/daemon/: Cargo.toml
ai-guard/daemon/src/: config.rs  contracts.rs  guard.rs  http_api.rs  main.rs  managed_pii.rs  native_host.rs  pii.rs  processes.rs  runtime.rs  windows_service.rs
ai-guard/desktop/: claude-desktop-hook.cjs  claude-desktop-uia-guard.ps1
ai-guard/extension/: blocked.html  blocked.js  content-script.js  manifest.json  service-worker.js
ai-guard/installer/: install-enterprise.ps1  install.ps1  uninstall.ps1
ai-guard/installer/admin-console/: AIGuard.AdminConsole.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  (+2 more)
ai-guard/shared/: api-contract.json  default-blocking.json  types.ts
config/: ai-guard.example.json
daemon/src/: config.rs  contracts.rs  guard.rs  http_api.rs  main.rs  managed_pii.rs  pii.rs  processes.rs  runtime.rs  windows_service.rs
desktop/: claude-desktop-hook.cjs
extension/: blocked.html  content-script.js  service-worker.js
installer/: install-enterprise.ps1  install.ps1  uninstall.ps1
installer/assets/: extension-public-key.b64
installer/scripts/: package-extension.ps1  sync-claude-store-runtime.ps1  write-config.ps1
shared/: types.ts
(+72 files in other folders)
